fixed wrong display on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -74,17 +74,16 @@ button,
 }
 
 button {
-  width: 80px;
-  margin-bottom: 1.5em;
   border: none;
   background: #FA8320;
   color: black;
-  font-size: 1.25rem;
-  grid-column: 1 / -1;
+  font-size: 1rem;
+  grid-column: 2 / -1;
   -ms-grid-row: 1;
   grid-row: 1;
   -ms-grid-column-align: left;
       justify-self: left;
+  align-self: center;
 }
 
 button:active,
@@ -150,8 +149,8 @@ form {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr;
-  grid-template-columns: 1fr;
-  grid-column-gap: 1.5em;
+  grid-template-columns: 1fr 80px;
+  align-items: center;
 }
 
 .autocomplete {
@@ -166,6 +165,8 @@ input {
   margin-right: 2em;
   padding: .75em;
   z-index: 2;
+  grid-column: 1;
+  grid-row: 1;
   border-radius: 100px;
   outline: 0;
   font-size: 1rem;
@@ -215,6 +216,11 @@ input:focus {
   transition: background 0.2s;
 }
 
+button {
+  justify-self: center;
+  align-self: center;
+}
+
 /* ===============
     RESULT PAGE
 =============== */
@@ -245,7 +251,7 @@ input:focus {
 }
 
 .container {
-  width: 75%;
+  width: 100%;
   margin: 1.5em auto;
   position: relative;
   display: -ms-grid;
@@ -281,6 +287,10 @@ input:focus {
 ==================== */
 
 @media (min-width: 650px) {
+  .container {
+    width: 80%;
+  }
+
   .grid {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   }
@@ -332,7 +342,7 @@ input:focus {
     grid-column: 1 / 2;
     -ms-grid-column-align: left;
         justify-self: left;
-  }
+  }James
 
   #team { 
     grid-column: 3 / -1;
@@ -350,12 +360,18 @@ input:focus {
     width: 40%;
   }
 
+  .search-bar {
+    grid-column-gap: 1.5em;
+  }
+
   input {
+    width: 100%;
     font-size: 1.5rem;
   }
 
   button {
     margin: 0;
+    width: 80px;
     grid-column: 2 / -1;
     -ms-grid-row: 1;
     grid-row: 1;
